--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,14 @@ div {
 }
 
 #calculatorScreen {
+    font-size: 80px;
     display: flex;
-    flex-grow: 2;
+    /* flex-grow: 2; */
     background-color: aliceblue;
-    justify-content:center;
-    align-items: center;
+    justify-content: flex-end;
+    /* align-items: center; */
     margin-bottom: 10px;
+    padding: 1px 3px;
 }
 
 #calculatorButtonContainer {
