Fix bug where 'a' would reassign to '0.' after hitting decimal button

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@ div {
 }
 
 #calculatorBody {
-    width: 69%;
-    height: 60%;
+    /* width: 69%;
+    height: 60%; */
+    width: 430px;
+    height: 540px;
     background-color: black;
     padding: 12px;
     display: flex;
