--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-div {
-    color: lime;
+    flex-direction: column;
 }
 
 #calculatorBody {
@@ -19,6 +16,8 @@ div {
     padding: 12px;
     display: flex;
     flex-direction: column;
+
+    border-radius: 13px;
 }
 
 #calculatorScreen {
@@ -30,6 +29,10 @@ div {
     /* align-items: center; */
     margin-bottom: 10px;
     padding: 1px 0px;
+
+    border-radius: 6px;
+
+    color: rgb(0, 0, 0);
 }
 
 #calculatorButtonContainer {
@@ -38,12 +41,14 @@ div {
     background-color: red;
     flex-wrap: wrap;
 
+    border-radius: 6px;
+
 }
 
 /* buttons */
 #calculatorButtonContainer>*{
     font-size: 32px;
-    border-color: purple;
+    /* border-color: purple; */
     border-width: 4px;
     border-style: solid;
     flex: 20%;
@@ -52,4 +57,8 @@ div {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#commandInfo {
+    margin-top: 30px;
 }
