--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'digital-7';
+    src: url(digital-7\ \(mono\).ttf);
+}
+
+
 body, html {
     height: 100%;
     margin: 0;
@@ -22,13 +28,13 @@ body, html {
 
 #calculatorScreen {
     font-size: 80px;
+    font-family: 'digital-7';
     display: flex;
     /* flex-grow: 2; */
     background-color: aliceblue;
     justify-content: flex-end;
     /* align-items: center; */
     margin-bottom: 10px;
-    padding: 1px 0px;
 
     border-radius: 6px;
 
