--- a/styles.css
+++ b/styles.css
@@ -16,20 +16,22 @@ body, html {
 #calculatorBody {
     /* width: 69%;
     height: 60%; */
-    width: 420px;
-    height: 640px;
-    background-color: rgb(42, 14, 145);
-    padding: 24px 20px 50px 20px;
+    width: 380px;
+    height: 660px;
+    background-color: rgb(9, 84, 151); 
+    /* color from color picker */
+    padding: 24px 20px 70px 20px;
     display: flex;
     flex-direction: column;
     border-width: 4px;
     border-style: solid;
-    border-color: black;
+    border-color: rgb(7, 66, 117);
 
     border-radius: 10px 10px 40px 40px;
 }
 
 #calculatorScreen {
+    height: 50px;
     font-size: 70px;
     font-family: 'digital-7';
     /* letter-spacing: 1px; */
@@ -41,9 +43,9 @@ body, html {
     /* align-items: center; */
 
     /* margin-bottom: 10px; */
-    margin: 10px 25px 0px 25px;
+    margin: 8px 25px 14px 25px;
 
-    padding: 0px 10px;
+    padding: 0px 10px 16px 10px;
 
     border-radius: 6px;
 
@@ -52,18 +54,18 @@ body, html {
 
 #calculatorButtonContainer {
     display: flex;
-    flex-grow: 5;
-    background-color: red;
-    flex-wrap: wrap;
-
-    border-radius: 6px;
-
+    /* justify-content: space-between; */
+    flex: auto;
+    padding: 16px 10px;
+    border-width: 4px;
+    border-color: grey;
+    border-radius: 12px;
+    border-style: groove;
 }
 
 /* buttons */
-#calculatorButtonContainer>*{
+/* #calculatorButtonContainer>*{
     font-size: 32px;
-    /* border-color: purple; */
     border-width: 4px;
     border-style: solid;
     flex: 20%;
@@ -72,6 +74,74 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+} */
+
+.normalButtons {
+    display: flex;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
+    /* align-items: baseline; */
+    /* flex-grow: 0; */
+    /* justify-content: space-evenly; */
+    width: 250px;
+    height: 400px;
+
+    gap: 20px 12px;
+
+    /* gap: 20px; */
+    /* gap: 20px 20px; */
+
+
+    /* flex: auto; */
+    
+    /* flex: auto; */
+    
+}
+
+.normalButtons>*{
+    font-size: 26px;
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    /* width: 20px;
+    height: 20px; */
+    /* margin: 10px; */
+    background: purple;
+
+    /* margin-right: 10px; */
+
+    width: 75px;
+    height: 50px;
+}
+
+.operatorButtons {
+    display: flex;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+    /* flex-grow: 0; */
+    justify-content: space-between;
+    margin-left: auto;
+
+    width: 75px;
+    height: 400px;
+}
+
+.operatorButtons>*{
+    font-size: 26px;
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    /* width: 20px;
+    height: 20px; */
+    /* margin: 10px; */
+    background: purple;
+
+    width: 75px;
+    height: 50px;
+}
+
+#Enter {
+    height: 120px;
 }
 
 #commandInfo {
@@ -79,11 +149,11 @@ body, html {
 }
 
 #companyAndSolar {
-    font-size: 30px;
+    font-size: 28px;
     font-weight: 100;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     /* font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    color: rgb(190, 190, 190);
+    color: rgb(224, 224, 224);
     display: flex;
     flex-direction: column;
     margin: 0px;
@@ -93,13 +163,30 @@ p {
     margin: 10px 0px 0px 0px;
 }
 
+ul {
+    margin: 0px;
+    margin-top: 10px;
+    padding: 0px;
+    list-style-type: none;
+    display: flex;
+}
+
+li {
+    background-color: rgba(29, 29, 29, 0.952);
+    width: 45px;
+    height: 55px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: rgb(20, 20, 20);
+}
+
 #companyName {
     letter-spacing: -3px;
 }
 
 #modelName {
     color: white;;
-    font-size: 50px;
+    font-size: 46px;
     font-weight: 1000;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: flex;
@@ -110,4 +197,11 @@ p {
 #extraInfo {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 10px;
+    margin-bottom: 25px;
+    border-bottom: 4px;
+    border-color: grey;
+    border-bottom-style:groove;
 }
+
+
