--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 @font-face {
-    font-family: 'digital-7';
-    src: url(digital-7\ \(mono\).ttf);
+    font-family: 'digital-7-italic';
+    src: url(digital-7\ \(mono\ italic\).ttf);
+}
+@font-face {
+    font-family: 'public-sans';
+    src: url(PublicSans-VariableFont_wght.ttf);
 }
 
 
@@ -16,7 +20,7 @@ body, html {
 #calculatorBody {
     /* width: 69%;
     height: 60%; */
-    width: 380px;
+    width: 390px;
     height: 660px;
     background-color: rgb(9, 84, 151); 
     /* color from color picker */
@@ -28,12 +32,14 @@ body, html {
     border-color: rgb(7, 66, 117);
 
     border-radius: 10px 10px 40px 40px;
+
+    box-shadow: -3px 3px 10px 10px rgb(124, 124, 124);
 }
 
 #calculatorScreen {
     height: 50px;
     font-size: 70px;
-    font-family: 'digital-7';
+    font-family: 'digital-7-italic';
     /* letter-spacing: 1px; */
     display: flex;
     /* flex-grow: 2; */
@@ -45,11 +51,19 @@ body, html {
     /* margin-bottom: 10px; */
     margin: 8px 25px 14px 25px;
 
-    padding: 0px 10px 16px 10px;
+    padding: 1px 6px 1px 6px;
 
     border-radius: 6px;
+    border-style: solid;
+    border-width: 3px;
+    border-color:rgb(140, 170, 170);
 
     color: rgb(0, 0, 0);
+
+    line-height: 0.75;
+
+    letter-spacing: -2.7px;
+
 }
 
 #calculatorButtonContainer {
@@ -78,24 +92,13 @@ body, html {
 
 .normalButtons {
     display: flex;
-    /* flex-direction: row; */
+
     flex-wrap: wrap;
-    /* align-items: baseline; */
-    /* flex-grow: 0; */
-    /* justify-content: space-evenly; */
-    width: 250px;
+    
+    width: 251px;
     height: 400px;
 
-    gap: 20px 12px;
-
-    /* gap: 20px; */
-    /* gap: 20px 20px; */
-
-
-    /* flex: auto; */
-    
-    /* flex: auto; */
-    
+    gap: 14.8px 12px;
 }
 
 .normalButtons>*{
@@ -110,7 +113,7 @@ body, html {
 
     /* margin-right: 10px; */
 
-    width: 75px;
+    width: 64px;
     height: 50px;
 }
 
@@ -122,7 +125,7 @@ body, html {
     justify-content: space-between;
     margin-left: auto;
 
-    width: 75px;
+    width: 75.43px;
     height: 400px;
 }
 
@@ -136,7 +139,7 @@ body, html {
     /* margin: 10px; */
     background: purple;
 
-    width: 75px;
+    width: 64px;
     height: 50px;
 }
 
@@ -182,6 +185,12 @@ li {
 
 #companyName {
     letter-spacing: -3px;
+    /* Public */
+    font-family: 'public-sans';
+    font-weight: 200;
+    font-size: 30px;
+    font-stretch: expanded;
+    margin-top: 5px;
 }
 
 #modelName {
@@ -190,6 +199,7 @@ li {
     font-weight: 1000;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: flex;
+    font-family: sans-serif;
     flex-direction:row;
     margin-top: 2px;
 }
@@ -209,18 +219,34 @@ li {
 .whiteButton {
     background-color: white;
     color:darkblue;
+
+    border-color: rgb(48, 48, 48);
+    border-width: 3px;
+    border-style: solid;
 }
 
 .operator,
 .redButton {
-    background-color: rgb(204, 25, 25);
+    background-color: rgb(230, 27, 27);
     color: white;
+
+    border-color: rgb(77, 1, 1);
+    border-width: 3px;
+    border-style: solid;
+
 }
 
 .number,
 .whiteButton,
 .operator,
 .redButton {
-    border-radius: 6px;
-}
+    border-radius: 8px;
+    padding-left: 7px;
 
+    box-shadow: -3px 3px 10px 4px rgb(59, 59, 59);
+
+    
+
+    
+    /* border-style: solid; */
+}
