--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ body, html {
     /* margin-right: 10px; */
 
     /* width: 64px; */
-    width: 71px;
+    width: 64px;
     height: 50px;
 }
 
@@ -169,7 +169,7 @@ body, html {
 
     /* flex-shrink: 0 0 0; */
 
-    width: 71px;
+    width: 64px;
     height: 50px;
 }
 
@@ -267,7 +267,7 @@ li {
 .operator,
 .redButton {
     border-radius: 8px;
-    /* padding-left: 7px; */
+    padding-left: 7px;
 
     box-shadow: -3px 3px 10px 4px rgb(59, 59, 59);
 
@@ -286,6 +286,6 @@ li {
 }
 
 p {
-    /* margin: 10px 0px 0px 0px; */
-    margin: 0px 0px 0px 7px;
+    margin: 10px 0px 0px 0px;
+    /* margin: 0px 0px 0px 7px; */
 }
