--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'digital-7-italic';
-    src: url(digital-7\ \(mono\ italic\).ttf);
+    src: url(./fonts/digital-7\ \(mono\ italic\).ttf);
 }
 @font-face {
     font-family: 'public-sans';
-    src: url(PublicSans-VariableFont_wght.ttf);
+    src: url(./fonts/PublicSans-VariableFont_wght.ttf);
 }
 
 
@@ -282,6 +282,9 @@ li {
 .bump {
     display: flex;
     flex: auto;
+    margin-left: -7px;
+    margin-top: -4px;
+    /* counteracts padding on buttons */
 
 }
 
