--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,14 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    border-width: 4px;
+    border-style: groove;
+    /* border-style:solid; */
+    border-color: grey;
+
+    box-shadow: inset 0px 0px 0px 30px rgb(35, 95, 95);
+
 }
 
 .boxBumps {
@@ -77,7 +85,7 @@ body, html {
     /* EXTREMELY IMPORTANT MARGIN */
 
     /* margin: 12px; */
-    margin: 5px;
+    margin: 8px;
     /* Left and right so boxes stay away and leave 
     room for shadow */
 
@@ -94,7 +102,7 @@ body, html {
 
     letter-spacing: -2.7px;
 
-    box-shadow: inset 10px;
+    /* box-shadow: 0px 0px 2px 10px rgb(35, 95, 95); */
 
 }
 
