--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,15 @@ body, html {
 #calculatorBody {
     /* width: 69%;
     height: 60%; */
-    width: 390px;
+
+    width: 441px;
     height: 660px;
-    background-color: rgb(9, 84, 151); 
+
+    /* background-color: rgb(9, 84, 151);  */
+    background-color: rgb(41, 68, 137); 
+
+
+
     /* color from color picker */
     /* padding: 24px 20px 70px 20px; */
     /* EXTREMELY IMPORTANT PADDING */
@@ -37,35 +43,49 @@ body, html {
     box-shadow: -3px 3px 10px 10px rgb(124, 124, 124);
 }
 
-#boxAroundScreen {
-    /* list-style: none; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border-width: 4px;
-    border-style: groove;
-    /* border-style:solid; */
-    border-color: grey;
-
-    box-shadow: inset 0px 0px 0px 30px rgb(35, 95, 95);
-
-}
-
 .boxBumps {
     margin: 0px;
     padding: 0px;
-    height: 76px;
+    height: 77px;
     width: 40px;
-    flex-shrink: 0;
-    border-radius: 5px;
-    border-style: groove;
 
-    background-color: rgb(9, 84, 151); 
+    flex-shrink: 0;
+
+
+    /* border-radius: 5px; */
+    /* border-style: groove;
+    border-width: 3px; */
+    border-style: solid;
+    border-width: 3px;
+
+    background-color: rgb(41, 68, 137); 
 
     background-image: url(./images/BluePixelBump.png);
     background-size: 8px 5px;
     background-repeat: repeat;
+}
+
+#boxAroundScreen {
+    /* list-style: none; */
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 30px 10px 10px 10px;
+
+    border-width: 4px;
+    border-style: inset;
+    /* border-style: groove; */
+    /* border-color: grey; */
+    border-color: rgb(53, 51, 51);
+    border-bottom-color: rgb(0, 0, 0);
+    /* border-bottom-color: rgba(81, 89, 158, 0.747); */
+    /* border-bottom-color: rgb(1, 19, 36); */
+
+
+    /* box-shadow: inset 0px 0px 0px 30px rgb(30, 87, 87); */
+    box-shadow: inset 0px 0px 4px 50px rgb(67, 74, 69);
 }
 
 #calculatorScreen {
@@ -78,7 +98,11 @@ body, html {
     display: flex;
     flex-shrink: 0;
     
-    background-color:rgb(159, 194, 194);
+    /* background-color:rgb(159, 194, 194); */
+    /* background-color:rgb(156, 172, 165); */
+    background-color:rgb(187, 181, 181);
+
+
     justify-content: flex-end;
     
     /* margin: 8px 25px 14px 25px; */
@@ -86,15 +110,19 @@ body, html {
 
     /* margin: 12px; */
     margin: 8px;
+    /* CHANGE BACK TO 8 */
+
     /* Left and right so boxes stay away and leave 
     room for shadow */
 
     padding: 1px 6px 1px 6px;
 
     border-radius: 6px;
-    border-style: solid;
+    border-style: inset;
     border-width: 3px;
-    border-color:rgb(140, 170, 170);
+    /* border-color:rgb(140, 170, 170); */
+    border-color: rgb(53, 51, 51);
+
 
     color: rgb(0, 0, 0);
 
@@ -115,6 +143,9 @@ body, html {
     border-color: grey;
     border-radius: 12px;
     border-style: groove;
+
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 /* buttons */
@@ -248,10 +279,13 @@ li {
     display: flex;
     justify-content: space-between;
     padding-bottom: 10px;
-    margin-bottom: 25px;
+    margin-bottom: 17px;
     border-bottom: 4px;
     border-color: grey;
-    border-bottom-style:groove;
+    border-bottom-style: groove;
+
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 
