--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
     src: url(./fonts/PublicSans-VariableFont_wght.ttf);
 }
 
+@font-face {
+    font-family: 'rokitt';
+    src: url(./fonts/Rokkitt-VariableFont_wght.ttf);
+}
+
 
 body, html {
     height: 100%;
@@ -22,7 +27,8 @@ body, html {
     height: 60%; */
 
     width: 441px;
-    height: 660px;
+    /* height: 660px; */
+    height: 740px;
 
     /* background-color: rgb(9, 84, 151);  */
     background-color: rgb(41, 68, 137); 
@@ -38,7 +44,7 @@ body, html {
     border-style: solid;
     border-color: rgb(7, 66, 117);
 
-    border-radius: 10px 10px 40px 40px;
+    border-radius: 10px 10px 30px 30px;
 
     box-shadow: -3px 3px 10px 10px rgb(124, 124, 124);
 }
@@ -56,12 +62,16 @@ body, html {
     /* border-style: groove;
     border-width: 3px; */
     border-style: solid;
+    border-radius: 6px;
     border-width: 3px;
+    border-color: rgb(30, 51, 104);
+    /* border-top-color: black; */
 
     background-color: rgb(41, 68, 137); 
 
+
     background-image: url(./images/BluePixelBump.png);
-    background-size: 8px 5px;
+    background-size: 9px 5px;
     background-repeat: repeat;
 }
 
@@ -138,14 +148,17 @@ body, html {
     display: flex;
     /* justify-content: space-between; */
     flex: auto;
-    padding: 16px 10px;
+    padding: 10px 10px;
     border-width: 4px;
     border-color: grey;
     border-radius: 12px;
     border-style: groove;
 
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 12px;
+    margin-right: 12px;
+
+    max-height: 400px;
+    /* MAY CAUSE ISSUES */
 }
 
 /* buttons */
@@ -237,7 +250,7 @@ body, html {
     margin: 0px;
 }
 
-ul {
+#solarPanelContainer {
     margin: 0px;
     margin-top: 10px;
     padding: 0px;
@@ -245,13 +258,20 @@ ul {
     display: flex;
 }
 
-li {
+.solarPanel {
     background-color: rgba(29, 29, 29, 0.952);
     width: 45px;
-    height: 55px;
-    border-width: 3px;
+    height: 53px;
+    border-width: 2px;
+    border-top-width: 8px;
     border-style: solid;
     border-color: rgb(20, 20, 20);
+}
+
+ul {
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
 }
 
 #companyName {
@@ -270,7 +290,7 @@ li {
     font-weight: 1000;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: flex;
-    font-family: sans-serif;
+    font-family: "rokit";
     flex-direction:row;
     margin-top: 2px;
 }
@@ -367,4 +387,14 @@ p {
     /* margin: 10px 0px 0px 0px; */
     margin: 0px;
     /* margin: 0px 0px 0px 7px; */
+}
+
+#OdinCalcIcon {
+    width: 30px;
+    height: auto;
+
+    margin-left: 14px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+
 }
